--- a/ProyectoFinal/.classpath
+++ b/ProyectoFinal/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/jever/Downloads/sqljdbc_12.10.1.0_enu/sqljdbc_12.10/enu/jars/mssql-jdbc-12.10.1.jre8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
